@@ -79,7 +79,6 @@ Gscan2pdf::Config::add_defaults( \%output );
     'unsharp threshold'     => 0.05,
     'cache options'         => TRUE,
     'restore window'        => TRUE,
-    'startup warning'       => FALSE,
     'date offset'           => 0,
     'pdf compression'       => 'auto',
     'quality'               => 75,
