@@ -4,6 +4,7 @@
   Closes LP: #844582 ("Invalid argument" when trying to scan)
 * Moved config file format to JSON. JSON::PP is a core module,
   so this does not create a new dependency.
+* + option not to show dialog messages
 
 
 1.3.2 (13.05.2015):
